# cyclonedx-editor-validator

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.html  LICENSE  NOTICE  README.md  SECURITY.md  first_steps.html  generated_init__function_output_sbom.json  genindex.html  index.html  known_limitations.html  list_components.csv  list_components.txt  list_licenses.csv  list_licenses.txt  maintainers.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  searchindex.js  sitemap.xml
.clusterfuzzlite/: Dockerfile  build.sh  requirements.txt
.doctrees/: CONTRIBUTING.doctree  environment.pickle  first_steps.doctree  index.doctree  known_limitations.doctree  maintainers.doctree
.doctrees/usage/: amend.doctree  build-public.doctree  index.doctree  init-sbom.doctree  list.doctree  merge-vex.doctree  merge.doctree  set.doctree  validate.doctree  vex.doctree
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/workflows/: bump_spdx_schema_version.yaml  cflite_batch.yml  cflite_cron.yml  cflite_pr.yml  codeql.yml  dependabot-pre-commit.yaml  main.yml  pr-labeler.yml  python-publish.yml  python-test-publish.yml  scorecard.yml  tests.yml  update-pre-commit.yml
CONTRIBUTING/: index.html
_sources/: CONTRIBUTING.rst.txt  index.rst.txt  known_limitations.rst.txt
_sources/usage/: amend.rst.txt  merge-vex.rst.txt  merge.rst.txt  set.rst.txt
_static/: documentation_options.js
available_commands/: index.html
cdxev/: __init__.py  __main__.py  build_public_bom.py  create_notice_file.py  error.py  initialize_sbom.py  list_command.py  log.py  merge.py  merge_vex.py  pkg.py  plausibility_check.py  set.py  vex.py
cdxev/amend/: __init__.py  command.py  license.py  license_name_spdx_id_map.json  operations.py  process_license.py  replace_license_name_with_id.py
cdxev/auxiliary/: filename_gen.py  identity.py  io_processing.py  output.py  sbomFunctions.py  sbom_functions.py  version_processing.py
cdxev/auxiliary/schema/: bom-1.2-strict.schema.json  bom-1.2.schema.json  bom-1.2.xsd  bom-1.3-custom.schema.json  bom-1.3-strict.schema.json  bom-1.3.schema.json  bom-1.3.xsd  bom-1.4-custom.schema.json  bom-1.4.schema.json  bom-1.4.xsd  bom-1.5-custom.schema.json  bom-1.5.proto  bom-1.5.schema.json  bom-1.5.xsd  bom-1.6-custom.schema.json  bom-1.6.proto  bom-1.6.schema.json  bom-1.6.xsd  bom-1.7-custom.schema.json  bom-1.7.schema.json  cryptography-defs.json  cryptography-defs.schema.json  spdx.schema.json
cdxev/validator/: __init__.py  customreports.py  helper.py  validate.py  warningsngreport.py
css/: festo-web-essentials.css
docs/: CONTRIBUTING.md  available_commands.md  index.md  known_limitations.md  maintainers.md
docs/git/: branching-strategy.md
docs/source/: CONTRIBUTING.rst  available_commands.rst  conf.py  first_steps.rst  index.rst  maintainers.rst
docs/source/css/: festo-web-essentials.css
docs/source/usage/: amend.rst  build-public.rst  index.rst  init-sbom.rst  list.rst  merge.rst  set.rst  validate.rst  vex.rst
known_limitations/: index.html
maintainers/: index.html
search/: search_index.json
site/: 404.html  index.html  search.html  sitemap.xml
site/CONTRIBUTING/: index.html
site/available_commands/: index.html
site/known_limitations/: index.html
site/maintainers/: index.html
site/search/: search_index.json
tests/: __init__.py  temp_test_versioning.py  test_amend.py  test_build_public_bom.py  test_create_notice_file.py  test_customreports.py  test_error.py  test_filename_gen.py  test_identity.py  test_initialize_sbom.py  test_io_processing.py  test_list_command.py  test_log.py  test_main.py  test_merge.py  test_mergeVex.py  test_merge_vex.py  test_output.py  test_plausibility_check.py  test_sbom_functions.py  test_set.py  test_spec_version.py  test_validate.py  test_version_processing.py  test_vex.py  test_warningsngreport.py
tests/auxiliary/: custom_version_list.json  helper.py  sbomFunctionsTests.py  test_spec_version.py
tests/auxiliary/licenses/: UPPERCASE.license  another license.txt  license_name
tests/auxiliary/test_amend_sboms/: bom.json  bom_licenses_changed.json  bom_licenses_changed_with_id.json  example_list_with_license_names.json  test.cdx.json
tests/auxiliary/test_build_public_bom_sboms/: Acme_Application_9.1.1_20220217T101458.cdx.json  expected_sbom_deleted_nested_component.json  internal_removed_sbom.json  public_sboms_for_documentation_examples.json  sbom_nested_components.json  sboms_for_documentation_examples.json
tests/auxiliary/test_create_notice_file_sboms/: Acme_Application_9.1.1_20220217T101458.cdx.json
tests/auxiliary/test_mergeVex_sboms/: bom.json  goal_one_deleted.json
tests/auxiliary/test_merge_sboms/: additional_sboms.json  duplicate_bomrefs_variant_1.json  duplicate_bomrefs_variant_2.json  governing_program.json  merged_sbom.json  ratings_lists_for_tests.json  sections_for_test_sbom.json  sub_program.json
tests/auxiliary/test_merge_vex_sboms/: auxiliar_vulnerability.json  goal.json  goal_one_deleted.json  vex.json
tests/auxiliary/test_plausibility_check_sboms/: sub_programm_T5.0.3.96_20220217T101458_cdx.json
tests/auxiliary/test_set_sboms/: Acme_Application_9.1.1_ec7781220ec7781220ec778122012345_20220217T101458.cdx.json  test.cdx.json
tests/auxiliary/test_validate_sboms/: Acme_Application_9.1.1_20220217T101458.cdx.json  Acme_Application_9.1.1_ec7781220ec7781220ec778122012345_20220217T101458.cdx.json  Acme_Application_9.1.1_ec7781220ec7781220ec778122012345_20220217T101458_v1.7.cdx.json
tests/auxiliary/test_vex/: bom.json  embedded_vex.json  list_default.csv  (+5 more)
tests/fuzz/: README.md  _sbom_builder.py  fuzz_amend.py  fuzz_build_public_bom.py  fuzz_identity.py  fuzz_init_sbom.py  fuzz_list.py  fuzz_merge.py  fuzz_sbom_filename.py  fuzz_set.py  fuzz_spec_version.py  fuzz_validate.py  fuzz_version_range.py  fuzz_vex.py
tests/integration/: __init__.py  conftest.py  helper.py  test_integration.py
usage/: amend.html  build-public.html  index.html  init-sbom.html  list.html  merge-vex.html  merge.html  set.html  validate.html  vex.html
(+86 files in other folders)
