[project]
name = "cyclonedx-editor-validator"
version = "0.0.0"
description = "Tool for creating, modifying and validating CycloneDX SBOMs."
authors = [
    { name = "Aleg Vilinski", email = "aleg.vilinski@festo.com" },
    { name = "Christian Beck", email = "christian.beck@festo.com" },
    { name = "Moritz Marseu", email = "moritz.marseu@festo.com" },
]
requires-python = ">=3.10.0,<4"
readme = "README.md"
license = "GPL-3.0-or-later"
dependencies = [
    "python-dateutil==2.9.0.post0",
    "jsonschema[format]==4.26.0",
    "docstring-parser>=0.16,<0.18",
    "charset-normalizer>=3.3.2,<4",
    "pyicu>=2.13.1,<3 ; sys_platform == 'darwin'",
    "pyicu>=2.13.1,<3 ; sys_platform == 'linux'",
    "natsort>=8.4.0,<9",
    "univers==31.1.0",
    "cyclonedx-python-lib==11.6.0",
    "email-validator==2.3.0",
]

[project.urls]
Documentation = "https://festo-se.github.io/cyclonedx-editor-validator/"
Repository = "https://github.com/Festo-se/cyclonedx-editor-validator/"
Issues = "https://github.com/Festo-se/cyclonedx-editor-validator/issues"
Changelog = "https://github.com/Festo-se/cyclonedx-editor-validator/releases"

[project.scripts]
cdx-ev = "cdxev.__main__:main"

[dependency-groups]
dev = [
    "mypy==1.19.1",
    "types-python-dateutil==2.9.0.20260124",
    "types-jsonschema==4.26.0.20260202",
    "pytest==9.0.2",
    "coverage==7.13.4",
    "toml==0.10.2",
    "typing-extensions==4.15.0",
    "bandit[toml]==1.9.2",
    "pre-commit==4.5.1",
    "ruff==0.15.1",
]
docs = [
    "sphinx-argparse==0.5.2",
    "sphinx-rtd-theme==3.1.0",
    "sphinx==8.1.3",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]
required-version = ">=0.7.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cdxev"]

[tool.mypy]
python_version = "3.10"
packages = "cdxev"
# Excludes tests even when mypy is invoked with a path (as the VS Code extension does, for instance)
exclude = ['tests/']
strict = true

[[tool.mypy.overrides]]
module = [
    "cdxev.merge",
    "cdxev.set",
    "cdxev.amend.operations",
    "cdxev.amend.license",
    "cdxev.amend.command",
    "cdxev.__main__",
    "cdxev.validator.helper",
    "cdxev.validator.validate",
    "cdxev.auxiliary.io_processing",
    "cdxev.auxiliary.sbom_functions",
    "cdxev.auxiliary.filename_gen",
    "cdxev.auxiliary.identity",
    "cdxev.validator.customreports",
    "cdxev.build_public_bom"
]
disallow_any_generics = false

[[tool.mypy.overrides]]
module = [
    "cdxev.__main__",
]
warn_return_any = false

[tool.coverage.run]
source = ["cdxev"]

[tool.coverage.report]
omit = ["*__init__.py*"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 99
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and pycodestyle (`E`) codes by default.
# Additionally adds isort (`I`), pep8-naming (`N`), bandit (`S`), and enables
# pycodestyle warnings (`W`), McCabe complexity (`C901`) and flake8-bugbear (`B`).
select = ["E", "F", "I", "N", "W", "C901", "S", "B"]
ignore = ["E203", "E722"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[too.ruff.lint.pycodestyle]
max-line-length=99

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101"]
